[package]
name = "libimmixcons"
version = "0.1.0"
authors = ["playX <gtashnik11@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = { version = "0.11", optional = true }
atomic = { version = "0.5", optional = true }
libc = "0.2"
memmap = "0.7"
once_cell = "1.5"
log = { version = "0.4", optional = true }
vec_map = "0.8"
simple_logger = "1.11"
errno = "0.2"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
] }
[features]
default = ["threaded"]
threaded = ["parking_lot", "atomic"]

[lib]
name = "libimmixcons"
crate-type = ["cdylib", "rlib", "staticlib"]
