[package]
name = "bdwgcvsimmix-bench"
version = "0.1.0"
authors = ["playX <gtashnik11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libimmixcons = { path = "../" }

[build-dependencies]
rerun_except = "0.1"
num_cpus = "1.13"
which = "4.0"
bindgen = "0.56"

[dev-dependencies]
instant = "0.1"
criterion = "0.3"
cfg-if = "1"

[profile.bench]
opt-level = 2
debug = false
debug-assertions = false
overflow-checks = false
#lto = "fat"
#panic = 'unwind' # This setting is always ignored.
incremental = false
codegen-units = 1
rpath = false

[profile.release]
#lto = "fat"
#opt-level = 3

[[bench]]
name = "gcbench-immix"
harness = false

[[bench]]
name = "gcbench-bdwgc"
harness = false

[[bench]]
name = "gcbench-bdwgc-incremental"
harness = false
